--- a/tugas15.html
+++ b/tugas15.html
@@ -14,7 +14,7 @@
 
         <h1>Form Input Image</h1>
 
-        <input type="image/png/jpg" src="/button_konfirmasi.png" width="200" value="gambar pinguin">
+        <input type="image/png/jpg" src="/Tugas_15_html/button_konfirmasi.png" width="200" value="gambar pinguin">
         <br><br>
 
         <button onclick="window.location.href = '/';">Choosen File</button> No file chosen
